# zope.interface

./: .bzrignore  .coveragerc  .editorconfig  .gitignore  .manylinux-install.sh  .manylinux.sh  .meta.toml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES.rst  CHANGES.txt  CONTRIBUTING.md  INSTALL.txt  MANIFEST.in  README-better_unittest.txt  README.rst  README.txt  appveyor.yml  bootstrap.py  build_ext_2.py  build_ext_3.py  buildout.cfg  pyproject.toml  rtd.txt  setup.cfg  setup.cfg.in  setup.py  test.py  tox.ini
.github/workflows/: codeql.yml  pre-commit.yml  tests.yml
benchmarks/: micro.py
docs/: README.rst  README.ru.rst  adapter.rst  adapter.ru.rst  api.rst  conf.py  hacking.rst  human.rst  index.rst  requirements.txt  verify.rst
docs/api/: adapters.rst  common.rst  components.rst  declarations.rst  index.rst  ro.rst  specifications.rst
src/zope/: __init__.py
src/zope/interface/: README.ru.txt  README.txt  __init__.py  _compat.py  _flatten.py  _zope_interface_coptimizations.c  adapter.py  adapter.ru.txt  adapter.txt  advice.py  declarations.py  document.py  exceptions.py  human.ru.txt  human.txt  index.txt  interface.py  interfaces.py  registry.py  ro.py  verify.py  verify.txt
src/zope/interface/common/: __init__.py  builtins.py  collections.py  idatetime.py  interfaces.py  io.py  mapping.py  numbers.py  sequence.py
src/zope/interface/common/tests/: __init__.py  basemapping.py  test_builtins.py  test_collections.py  test_idatetime.py  test_import_interfaces.py  test_io.py  test_numbers.py
src/zope/interface/tests/: __init__.py  advisory_testing.py  dummy.py  ifoo.py  m1.py  m2.py  odd.py  test_adapter.py  test_advice.py  test_declarations.py  test_document.py  test_element.py  test_exceptions.py  test_interface.py  test_interfaces.py  test_odd_declarations.py  test_registry.py  test_ro.py  test_sorting.py  test_verify.py  unitfixtures.py
zope/: interface.py  interfaces.py
zope/tests/: test_interface.py
