# Generated with zope.meta (https://zopemeta.readthedocs.io/) from:
# https://github.com/zopefoundation/meta/tree/master/src/zope/meta/c-code
[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "zope.interface"
version = "8.2"
description = "Interfaces for Python"
keywords = ["interface", "components", "plugins"]
dynamic = ["readme"]
requires-python = ">=3.10"
license = "ZPL-2.1"
authors = [
  { name = "Zope Foundation and contributors", email = "zope-dev@zope.dev" },
]
maintainers = [
  { name = "Plone Foundation and contributors", email = "zope-dev@zope.dev" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.optional-dependencies]
docs = ["Sphinx", "repoze.sphinx.autointerface", "furo"]
test = ["coverage[toml]", "zope.event", "zope.testing"]
testing = ["coverage[toml]", "zope.event", "zope.testing"]

[project.urls]
Documentation = "https://zopeinterface.readthedocs.io"
Issues = "https://github.com/zopefoundation/zope.interface/issues"
Source = "https://github.com/zopefoundation/zope.interface"
Changelog = "https://github.com/zopefoundation/zope.interface/blob/master/CHANGES.rst"

[tool.coverage.run]
branch = true
source = ["src/zope"]
relative_files = true

[tool.coverage.report]
fail_under = 98
precision = 2
ignore_errors = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "except ImportError:",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "self.fail",
    "raise AssertionError",
    "raise unittest.Skip",
]

[tool.coverage.html]
directory = "parts/htmlcov"

[tool.coverage.paths]
source = [
    "src/",
    ".tox/*/lib/python*/site-packages/",
    ".tox/pypy*/site-packages/",
]

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "CHANGES.rst"]}
